Bug 3001 - |glXSwapBuffers()|/|XPutImage()| are slow
Summary: |glXSwapBuffers()|/|XPutImage()| are slow
Status: RESOLVED FIXED
Alias: None
Product: xprint
Classification: Unclassified
Component: Server: DDX: PostScript (show other bugs)
Version: unspecified
Hardware: All All
: high major
Assignee: Roland Mainz
QA Contact:
URL: http://xprint.mozdev.org/pipermail/xp...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-12 15:20 UTC by Roland Mainz
Modified: 2005-04-12 00:06 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Simon's original patch (5.72 KB, patch)
2005-04-12 15:30 UTC, Roland Mainz
no flags Details | Splinter Review
Patch for 2005-04-12-trunk (7.48 KB, patch)
2005-04-12 17:02 UTC, Roland Mainz
no flags Details | Splinter Review

Description Roland Mainz 2005-04-12 15:20:49 UTC
[Originally reported by Simon Toedt in
http://xprint.mozdev.org/pipermail/xprint/2005-April/000462.html]
|glXSwapBuffers()| is slow in some cases thanks to the inefficient
implementation of |PsOut_OutImageBytes()|.

Simon wrote a patch which improves the situation a lot, Ill attach it here, make
sure it works everywhere and then commit it...
Comment 1 Roland Mainz 2005-04-12 15:30:39 UTC
Created attachment 2403 [details] [review]
Simon's original patch
Comment 2 Roland Mainz 2005-04-12 17:02:54 UTC
Created attachment 2404 [details] [review]
Patch for 2005-04-12-trunk

The changes include just a added comments, code style cleanup and a Changelog
diff.
Comment 3 Roland Mainz 2005-04-12 17:06:16 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  xc/ChangeLog
new revision: 1.871; previous revision: 1.870
/cvs/xorg/xc/programs/Xserver/Xprint/ps/psout.c,v  <-- 
xc/programs/Xserver/Xprint/ps/psout.c
new revision: 1.6; previous revision: 1.5
Mailing the commit message to xorg-commit@lists.freedesktop.org...

... marking bug as FIXED.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.