//bugs.freedesktop.org/show_bug.cgi?id=3001) attachment #2404     (https://bugs.freedesktop.org/attachment.cgi?id=2404) Improve rendering     performance when glXSwapBuffers()| or |XPutImage()| are called for the     PostScript DDX via optimizing the codepath around     |PsOut_OutImageBytes()|. Patch by Simon Toedt <simon.toedt@gmail.com>     and Roland Mainz <roland.mainz@nrubsig.org>.